--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>House Score Tracker</title>
-
 <style>
 /* --- BASIC LAYOUT --- */
 body {
@@ -62,7 +61,7 @@ header h1 {
     padding: 25px;
     border-radius: 12px;
     box-shadow: 0 0 15px rgba(0,0,0,0.2);
-    width: 320px;
+    width: 300px;
     z-index: 1000;
     transition: all 0.3s ease;
 }
@@ -87,7 +86,7 @@ header h1 {
 }
 
 .house-card {
-    width: 220px;
+    width: 200px;
     background: white;
     border-radius: 12px;
     padding: 20px;
@@ -143,63 +142,11 @@ body.dark-mode {
     background: #121212;
     color: #f0f0f0;
 }
-
-body.dark-mode header {
-    background: #999999;
-    color: #fff;
-}
-
-body.dark-mode .admin-panel { 
-    background: #1f1f1f; 
-    color: #f0f0f0; 
-}
-
-body.dark-mode .house-card { 
-    background: #1e1e1e; 
-}
-
-body.dark-mode .leaderboard { 
-    background: #1e1e1e; 
-}
-
-/* small responsive tweaks */
-@media (max-width: 700px) {
-    .scoreboard { padding: 15px; gap: 10px; }
-    .house-card { width: 45%; }
-}
+body.dark-mode header { background: #1f1f1f; color: #f0f0f0; }
+body.dark-mode .admin-panel { background: #1f1f1f; color: #f0f0f0; }
+body.dark-mode .house-card { background: #1e1e1e; }
+body.dark-mode .leaderboard { background: #1e1e1e; }
 </style>
-
-<!-- Firebase SDK (module) -->
-<script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-    import { getDatabase, ref, set, get, child, onValue } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js";
-
-    // Your Firebase config (complete)
-    const firebaseConfig = {
-      apiKey: "AIzaSyBMrqvOdPiXQPbhzu2S7k1Yx9EJ6tu28O4",
-      authDomain: "housesproject-cb92e.firebaseapp.com",
-      projectId: "housesproject-cb92e",
-      storageBucket: "housesproject-cb92e.firebasestorage.app",
-      messagingSenderId: "643241335908",
-      appId: "1:643241335908:web:c3cbbee89beb0185f8d371",
-      measurementId: "G-Q1Z380QK03",
-      databaseURL: "https://housesproject-cb92e-default-rtdb.firebaseio.com"
-    };
-
-    const app = initializeApp(firebaseConfig);
-    const db = getDatabase(app);
-
-    // expose helpers and db reference for the non-module script below
-    window._firebase = {
-        db,
-        ref,
-        set,
-        get,
-        child,
-        onValue
-    };
-</script>
-
 </head>
 <body>
 
@@ -213,233 +160,127 @@ body.dark-mode .leaderboard {
 </header>
 
 <!-- Admin Panel -->
-<div id="adminPanel" class="admin-panel hidden" role="dialog" aria-modal="true" aria-labelledby="admin-title">
-    <h2 id="admin-title">Admin Panel</h2>
-    <label>Acrobats:</label><input type="number" id="admin-acrobats" min="0">
-    <label>Quicksilver:</label><input type="number" id="admin-quicksilver" min="0">
-    <label>Druids:</label><input type="number" id="admin-druids" min="0">
-    <label>Bravehearts:</label><input type="number" id="admin-bravehearts" min="0">
-    <div style="display:flex;gap:8px;justify-content:flex-end;">
-        <button onclick="applyManualScores()">Update Scores</button>
-        <button class="close" onclick="closeAdmin()">Close</button>
-    </div>
+<div id="adminPanel" class="admin-panel hidden">
+    <h2>Admin Panel</h2>
+    <label>Acrobats:</label><input type="number" id="admin-acrobats">
+    <label>Quicksilver:</label><input type="number" id="admin-quicksilver">
+    <label>Druids:</label><input type="number" id="admin-druids">
+    <label>Bravehearts:</label><input type="number" id="admin-bravehearts">
+    <button onclick="applyManualScores()">Update Scores</button>
+    <button class="close" onclick="closeAdmin()">Close</button>
 </div>
 
 <!-- Scoreboard -->
-<section class="scoreboard" aria-label="Scoreboard">
+<section class="scoreboard">
     <div class="house-card acrobats">
-        <img src="project/acrobats.jpeg" alt="Acrobats logo" class="house-logo">
+        <img src="project/acrobats.jpeg" class="house-logo">
         <h2>Acrobats</h2>
         <p class="score" id="score-acrobats">0</p>
     </div>
     <div class="house-card quicksilver">
-        <img src="project/quicksilver.jpeg" alt="Quicksilver logo" class="house-logo">
+        <img src="project/quicksilver.jpeg" class="house-logo">
         <h2>Quicksilver</h2>
         <p class="score" id="score-quicksilver">0</p>
     </div>
     <div class="house-card druids">
-        <img src="project/druids.jpeg" alt="Druids logo" class="house-logo">
+        <img src="project/druids.jpeg" class="house-logo">
         <h2>Druids</h2>
         <p class="score" id="score-druids">0</p>
     </div>
     <div class="house-card bravehearts">
-        <img src="project/bravehearts.jpeg" alt="Bravehearts logo" class="house-logo">
+        <img src="project/bravehearts.jpeg" class="house-logo">
         <h2>Bravehearts</h2>
         <p class="score" id="score-bravehearts">0</p>
     </div>
 </section>
 
 <!-- Leaderboard -->
-<section class="leaderboard" aria-label="Leaderboard">
+<section class="leaderboard">
     <h2>Leaderboard</h2>
     <ul id="leaderboard-list"></ul>
 </section>
 
 <script>
-/*
-  Main script (non-module). Uses window._firebase populated by the module script above.
-  Waits for DOMContentLoaded and for firebase to be available.
-*/
-
-(function() {
-    const WAIT_TIMEOUT_MS = 5000; // how long to wait for firebase to appear
-    const POLL_INTERVAL_MS = 50;
-    let waited = 0;
-
-    function waitForFirebase(cb) {
-        if (window._firebase && window._firebase.db) {
-            return cb(null, window._firebase);
-        }
-        const interval = setInterval(() => {
-            waited += POLL_INTERVAL_MS;
-            if (window._firebase && window._firebase.db) {
-                clearInterval(interval);
-                return cb(null, window._firebase);
-            }
-            if (waited >= WAIT_TIMEOUT_MS) {
-                clearInterval(interval);
-                return cb(new Error("Firebase not available"));
-            }
-        }, POLL_INTERVAL_MS);
+/* --- ADMIN LOGIN --- */
+function adminLogin() {
+    const pwd = prompt("Enter admin password:");
+    if(pwd === "1234"){
+        openAdmin();
+    } else {
+        alert("Wrong password!");
     }
+}
 
-    document.addEventListener("DOMContentLoaded", () => {
-        waitForFirebase((err, fb) => {
-            if (err) {
-                console.error("Firebase failed to initialize:", err);
-                alert("Firebase failed to initialize. Check console.");
-                // still attempt to initialize leaderboard from defaults
-                updateLeaderboard();
-                return;
-            }
-            initApp(fb);
-        });
+/* --- ADMIN PANEL --- */
+function openAdmin() { document.getElementById("adminPanel").classList.remove("hidden"); }
+function closeAdmin() { document.getElementById("adminPanel").classList.add("hidden"); }
+
+/* --- SCORE SAVE / LOAD --- */
+function saveScores() {
+    const scores = {
+        acrobats: document.getElementById("score-acrobats").textContent,
+        quicksilver: document.getElementById("score-quicksilver").textContent,
+        druids: document.getElementById("score-druids").textContent,
+        bravehearts: document.getElementById("score-bravehearts").textContent
+    };
+    localStorage.setItem("houseScores", JSON.stringify(scores));
+}
+function loadScores() {
+    const saved = JSON.parse(localStorage.getItem("houseScores"));
+    if(saved){
+        document.getElementById("score-acrobats").textContent = saved.acrobats;
+        document.getElementById("score-quicksilver").textContent = saved.quicksilver;
+        document.getElementById("score-druids").textContent = saved.druids;
+        document.getElementById("score-bravehearts").textContent = saved.bravehearts;
+    }
+}
+
+/* --- APPLY SCORES --- */
+function applyManualScores() {
+    const fields = [
+        { input:"admin-acrobats", score:"score-acrobats" },
+        { input:"admin-quicksilver", score:"score-quicksilver" },
+        { input:"admin-druids", score:"score-druids" },
+        { input:"admin-bravehearts", score:"score-bravehearts" }
+    ];
+    fields.forEach(item=>{
+        const inputEl=document.getElementById(item.input);
+        if(inputEl.value.trim()!==""){
+            const scoreEl=document.getElementById(item.score);
+            scoreEl.textContent = parseInt(scoreEl.textContent)+parseInt(inputEl.value);
+        }
+        inputEl.value="";
     });
+    saveScores();
+    updateLeaderboard();
+    closeAdmin();
+}
 
-    // ---------- App logic ----------
-    function initApp(fb) {
-        const db = fb.db;
-        const refFn = fb.ref;
-        const setFn = fb.set;
-        const getFn = fb.get;
-        const childFn = fb.child;
-        const onValueFn = fb.onValue;
+/* --- LEADERBOARD --- */
+function updateLeaderboard() {
+    const scores=[
+        {name:"Acrobats", score:parseInt(document.getElementById("score-acrobats").textContent), class:"lb-acrobats"},
+        {name:"Quicksilver", score:parseInt(document.getElementById("score-quicksilver").textContent), class:"lb-quicksilver"},
+        {name:"Druids", score:parseInt(document.getElementById("score-druids").textContent), class:"lb-druids"},
+        {name:"Bravehearts", score:parseInt(document.getElementById("score-bravehearts").textContent), class:"lb-bravehearts"}
+    ];
+    scores.sort((a,b)=>b.score-a.score);
+    const list=document.getElementById("leaderboard-list");
+    list.innerHTML="";
+    scores.forEach(entry=>{
+        const li=document.createElement("li");
+        li.className=entry.class;
+        li.innerHTML=`${entry.name} <span>${entry.score}</span>`;
+        list.appendChild(li);
+    });
+}
 
-        const scoresRefPath = 'houseScores';
+/* --- DARK MODE --- */
+function toggleDarkMode() { document.body.classList.toggle("dark-mode"); }
 
-        // Save to Firebase
-        function saveScoresOnline() {
-            const scores = {
-                acrobats: Number(document.getElementById("score-acrobats").textContent) || 0,
-                quicksilver: Number(document.getElementById("score-quicksilver").textContent) || 0,
-                druids: Number(document.getElementById("score-druids").textContent) || 0,
-                bravehearts: Number(document.getElementById("score-bravehearts").textContent) || 0
-            };
-            try {
-                setFn(refFn(db, scoresRefPath), scores);
-            } catch (e) {
-                console.error("Error saving scores:", e);
-            }
-        }
-
-        // Load once (used initially)
-        function loadScoresOnce() {
-            const dbRef = refFn(db);
-            getFn(childFn(dbRef, scoresRefPath)).then(snapshot => {
-                if (snapshot.exists()) {
-                    const saved = snapshot.val();
-                    applySavedToDOM(saved);
-                }
-                updateLeaderboard();
-            }).catch(err=>{
-                console.error("Error reading scores:", err);
-                updateLeaderboard();
-            });
-        }
-
-        // Realtime listener (keeps all devices in sync)
-        function attachRealtimeListener() {
-            try {
-                onValueFn(refFn(db, scoresRefPath), snapshot => {
-                    if (snapshot.exists()) {
-                        const saved = snapshot.val();
-                        applySavedToDOM(saved);
-                        updateLeaderboard();
-                    }
-                });
-            } catch (e) {
-                console.error("Error attaching realtime listener:", e);
-            }
-        }
-
-        function applySavedToDOM(saved) {
-            document.getElementById("score-acrobats").textContent = Number(saved.acrobats) || 0;
-            document.getElementById("score-quicksilver").textContent = Number(saved.quicksilver) || 0;
-            document.getElementById("score-druids").textContent = Number(saved.druids) || 0;
-            document.getElementById("score-bravehearts").textContent = Number(saved.bravehearts) || 0;
-        }
-
-        // Expose core functions to the global scope (used by inline HTML buttons)
-        window.saveScoresOnline = saveScoresOnline;
-
-        window.changeScore = function(house, delta) {
-            const el = document.getElementById(`score-${house}`);
-            if (!el) return;
-            let current = Number(el.textContent) || 0;
-            current = current + Number(delta);
-            if (current < 0) current = 0;
-            el.textContent = current;
-            saveScoresOnline();
-            updateLeaderboard();
-        };
-
-        window.applyManualScores = function() {
-            const fields = [
-                { input:"admin-acrobats", score:"score-acrobats" },
-                { input:"admin-quicksilver", score:"score-quicksilver" },
-                { input:"admin-druids", score:"score-druids" },
-                { input:"admin-bravehearts", score:"score-bravehearts" }
-            ];
-            fields.forEach(item => {
-                const inputEl = document.getElementById(item.input);
-                if (!inputEl) return;
-                const valueRaw = inputEl.value;
-                if (valueRaw !== "" && valueRaw !== null) {
-                    const add = parseInt(valueRaw, 10);
-                    if (!isNaN(add) && add !== 0) {
-                        const scoreEl = document.getElementById(item.score);
-                        const old = Number(scoreEl.textContent) || 0;
-                        scoreEl.textContent = old + add;
-                    }
-                }
-                inputEl.value = "";
-            });
-            saveScoresOnline();
-            updateLeaderboard();
-            closeAdmin();
-        };
-
-        // Leaderboard
-        window.updateLeaderboard = function() {
-            const scores = [
-                {name:"Acrobats", score: Number(document.getElementById("score-acrobats").textContent) || 0, class:"lb-acrobats"},
-                {name:"Quicksilver", score: Number(document.getElementById("score-quicksilver").textContent) || 0, class:"lb-quicksilver"},
-                {name:"Druids", score: Number(document.getElementById("score-druids").textContent) || 0, class:"lb-druids"},
-                {name:"Bravehearts", score: Number(document.getElementById("score-bravehearts").textContent) || 0, class:"lb-bravehearts"}
-            ];
-            scores.sort((a,b)=>b.score - a.score);
-            const list = document.getElementById("leaderboard-list");
-            list.innerHTML = "";
-            scores.forEach(entry=>{
-                const li = document.createElement("li");
-                li.className = entry.class;
-                li.innerHTML = `${entry.name} <span>${entry.score}</span>`;
-                list.appendChild(li);
-            });
-        };
-
-        // Admin / UI helpers
-        window.adminLogin = function() {
-            const pwd = prompt("Enter admin password:");
-            if (pwd === "1234") {
-                openAdmin();
-            } else {
-                alert("Wrong password!");
-            }
-        };
-
-        window.openAdmin = function() { document.getElementById("adminPanel").classList.remove("hidden"); };
-        window.closeAdmin = function() { document.getElementById("adminPanel").classList.add("hidden"); };
-
-        window.toggleDarkMode = function() {
-            document.body.classList.toggle("dark-mode");
-        };
-
-        // Initialize: load once, attach realtime listener
-        loadScoresOnce();
-        attachRealtimeListener();
-    }
-})();
+/* --- INITIALIZE --- */
+loadScores();
+updateLeaderboard();
 </script>
 
 </body>
